Fix compatibility with firefox
Restores the footer to the previous version, fixes article being off centre for small devices

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -553,7 +553,7 @@ footer a:hover {
     border-style: solid;
     box-shadow: 0 4px 10px 0 #007BFF;
 }
-@media screen and (min-device-width: 900px) and (not (max-device-height: 500px)) {
+@media screen and (min-width: 900px) and (not (max-height: 500px)) {
     .asidefooter {
         padding-left: 29%;
     }
@@ -595,9 +595,9 @@ footer a:hover {
     }
     /* Improves article appearance */
     article {
-        margin: auto;
         width: auto;
-        margin: 2%;
+        margin-left: 2%;
+        margin-right: 2%;
     }
     article h1 {
         font-size: 200%;
